--- a/app-files/index.html
+++ b/app-files/index.html
@@ -19,6 +19,7 @@
 <body class="single-scene ">
 
   <div id="pano"></div>
+  <div id="spot">hello world</div>
 
   <script src="vendor/es5-shim.js"></script>
   <script src="vendor/eventShim.js"></script>
