--- a/app-files/index.html
+++ b/app-files/index.html
@@ -16,10 +16,34 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="single-scene ">
+<body class="single-scene">
 
   <div id="pano"></div>
-  <div id="spot">hello world</div>
+
+
+  <!-- hotspot and modal -->
+  <div id="spot" data-micromodal-trigger="modal-1" >hello world</div>
+
+  <!-- [1] -->
+  <div id="modal-1" aria-hidden="true" class="modal">
+    <!-- [2] -->
+    <div tabindex="-1" data-micromodal-close>
+      <!-- [3] -->
+      <div role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+        <header>
+          <h2 id="modal-1-title">
+           title
+          </h2>
+          <!-- [4] -->
+          <button aria-label="Close modal" data-micromodal-close>CLOSE</button>
+        </header>
+        <div id="modal-1-content">
+          <img src="img/Pikachu_dancin.gif">
+    
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="vendor/es5-shim.js"></script>
   <script src="vendor/eventShim.js"></script>
@@ -28,9 +52,17 @@
   <script src="vendor/screenfull.min.js"></script>
   <script src="vendor/bowser.min.js"></script>
   <script src="vendor/marzipano.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/micromodal/dist/micromodal.min.js"></script>
 
-  <script src="data.js"></script>
+
+
+  <!-- <script src="data.js"></script> -->
+  <!-- handle spehre image/video stuff -->
   <script src="index.js"></script>
+  <!-- handle modal and hotspot realted stuff -->
+  <script src="other.js"></script>
+
+
 
 </body>
 
