fixed tile size issue

--- a/app-files/index.html
+++ b/app-files/index.html
@@ -22,7 +22,10 @@
 
 
   <!-- hotspot and modal -->
-  <div id="spot" data-micromodal-trigger="modal-1" >hello world</div>
+  <div id="spot" data-micromodal-trigger="modal-1" >
+    <h1>hello world</h1>
+    <img src="img/doge.png">
+  </div>
 
   <!-- [1] -->
   <div id="modal-1" aria-hidden="true" class="modal">
