added mainmenu and tiles for room02

--- a/app-files/index.html
+++ b/app-files/index.html
@@ -20,6 +20,10 @@
 
   <div id="pano"></div>
 
+  <nav>
+    <a href="#" id="to-scene1" class="link"> > Room01</a>
+    <a href="#" id="to-scene2" class="link"> > Room02</a>
+  </nav>
 
   <!-- hotspot and modal -->
   <div id="spot" data-micromodal-trigger="modal-1" >
