--- a/app-files/room01.html
+++ b/app-files/room01.html
@@ -29,8 +29,8 @@
 
   <!-- hotspot and modal -->
   <div id="spot" data-micromodal-trigger="modal-1" >
-    <h1>hello world</h1>
-    <img src="img/doge.png">
+    <h1>ITEM 0001</h1>
+    <img src="img/Roberto-Coin-Golden-Gate-18K-Yellow-Gold-and-18K-White-Gold-Wide-Gold-Bangle-with-Diamonds-7771087AJBAX.png">
   </div>
 
   <!-- [1] -->
@@ -41,14 +41,16 @@
       <div role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
         <header>
           <h2 id="modal-1-title">
-           title
+           ITEM 0001
           </h2>
+
           <!-- [4] -->
           <button aria-label="Close modal" data-micromodal-close>CLOSE</button>
         </header>
         <div id="modal-1-content">
-          <img src="img/Pikachu_dancin.gif">
-    
+          <img src="img/Roberto-Coin-Golden-Gate-18K-Yellow-Gold-and-18K-White-Gold-Wide-Gold-Bangle-with-Diamonds-7771087AJBAX.png">
+          <p>Lorem ipsum erat placerat at orci ullamcorper sodales sollicitudin curae vehicula, aliquam a quisque consequat dolor rhoncus eros vehicula massa ligula, ipsum donec vivamus lacinia orci laoreet nam nisi velit.</p>
+
         </div>
       </div>
     </div>
